fix button color for dark mode

--- a/src/apps/fl-home/ui/sections/apps/style.scss
+++ b/src/apps/fl-home/ui/sections/apps/style.scss
@@ -46,7 +46,7 @@
 					padding-right: 12px; /* cause transparent buttons have their own spacing */
 
 					.fluid-button {
-						color: var(--card-color);
+						color: var(--card-color) !important; /* fix for dark mode too */
 						border-radius: calc( var(--card-radius) - 12px );
 
 						&:hover {
